test/data/semantic-errors/bad-werd-statement.derp
werd x = "herrro" derp
pront z derp